# py-chiaki-ng

./: .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STATUS.md  README.md  build.sh  implementation_details.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
py_chiaki_ng/: __init__.py
py_chiaki_ng/examples/: cv_automation.py  demo.py
src/: controller_binding.cpp  events_binding.cpp  py_chiaki_ng.cpp  session_binding.cpp  video_binding.cpp
tests/: __init__.py  test_basic.py
